<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".ReminderActivity">

    <LinearLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/title_header"
            android:text="@string/title_text"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"

            android:layout_alignBottom="@+id/title_view"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:id="@+id/title_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_alignParentRight="true"
            android:layout_toRightOf="@+id/title_header"
            android:layout_alignParentTop="true" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/date_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/title_layout" >

        <TextView
            android:id="@+id/date_header"
            android:text="@string/date_text"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" />

        <EditText
            android:id="@+id/date_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:focusable="false" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/time_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/date_layout" >

        <TextView
            android:id="@+id/time_header"
            android:text="@string/time_text"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" />

        <EditText
            android:id="@+id/time_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:focusable="false" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/time_layout"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/description_header"
            android:text="@string/description_text"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" />

        <EditText
            android:id="@+id/description_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>







    <Button
        android:id="@+id/save_button"
        android:text="@string/save_button_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" />



</RelativeLayout>
